Question screen ready
Still have to link it to the database and create the popup window when
an answer is given.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,10 +22,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/confirm_rally"
-        android:id="@+id/button1"
+        android:id="@+id/button"
         android:layout_alignTop="@+id/spinner"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="86dp"
-        android:onClick="startRally"/>
+        android:layout_marginTop="86dp" />
 
 </RelativeLayout>
