--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -21,7 +21,7 @@
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true"
         class = "com.google.android.gms.maps.MapFragment"
-        android:layout_marginBottom="130dp" />
+        android:layout_marginBottom="150dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,9 +29,9 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Question?"
         android:id="@+id/textView3"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText" />
+        android:layout_above="@+id/editText"
+        android:layout_alignRight="@+id/editText"
+        android:layout_alignEnd="@+id/editText" />
 
     <EditText
         android:layout_width="wrap_content"
