--- a/app/src/main/res/layout/activity_mystery.xml
+++ b/app/src/main/res/layout/activity_mystery.xml
@@ -97,10 +97,11 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Finish"
         android:id="@+id/button6"
         android:layout_marginTop="80dp"
         android:layout_below="@+id/editText6"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="Finish"/>
 
 </RelativeLayout>
