--- a/app/src/main/res/layout/activity_multi_question.xml
+++ b/app/src/main/res/layout/activity_multi_question.xml
@@ -45,4 +45,15 @@
         android:layout_above="@+id/button3"
         android:layout_toRightOf="@+id/button3"
         android:layout_toEndOf="@+id/button3" />
+
+    <fragment
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:name="com.google.android.gms.maps.MapFragment"
+        android:id="@+id/map2"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/button3"
+        android:layout_alignStart="@+id/button3"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="130dp" />
 </RelativeLayout>
