--- a/app/src/main/res/layout/activity_multi_question.xml
+++ b/app/src/main/res/layout/activity_multi_question.xml
@@ -41,10 +41,9 @@
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/textView4"
-        android:layout_marginBottom="31dp"
-        android:layout_above="@+id/button3"
-        android:layout_toRightOf="@+id/button3"
-        android:layout_toEndOf="@+id/button3" />
+        android:layout_marginBottom="15dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/button3" />
 
     <fragment
         android:layout_width="wrap_content"
@@ -52,8 +51,6 @@
         android:name="com.google.android.gms.maps.MapFragment"
         android:id="@+id/map2"
         android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/button3"
-        android:layout_alignStart="@+id/button3"
         android:layout_marginTop="32dp"
-        android:layout_marginBottom="130dp" />
+        android:layout_marginBottom="140dp" />
 </RelativeLayout>
