--- a/app/src/main/res/layout/activity_sudoku_map.xml
+++ b/app/src/main/res/layout/activity_sudoku_map.xml
@@ -13,7 +13,8 @@
         android:id="@+id/map3"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="53dp" />
+        android:layout_marginTop="53dp"
+        android:layout_marginBottom="130dp" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -21,8 +22,7 @@
         android:layout_height="wrap_content"
         android:text="Proceed"
         android:id="@+id/button"
+        android:onClick="proceed"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="59dp"
-        android:onClick="proceed"/>
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
